In Progress - Accounting 360

--- a/displaytabs/AccountingUI-MainTemplate.html
+++ b/displaytabs/AccountingUI-MainTemplate.html
@@ -226,7 +226,7 @@
                                                 <li class="tab-pane active">
                                                     <a href="#TaxPeriodReturn" data-toggle="tab" aria-expanded="false">Tax Returns</a>
                                                 </li>
-                                                <li class="tab-pane active">
+                                                <li class="tab-pane">
                                                     <a href="#TaxPeriodPayment" data-toggle="tab" aria-expanded="true">Tax Payments</a>
                                                 </li>
                                                 <li class="tab-pane">
