In Progress - Accounting 360

--- a/displaytabs/AccountingUI-MainTemplate.html
+++ b/displaytabs/AccountingUI-MainTemplate.html
@@ -216,6 +216,7 @@
                                     <div class="box-header with-border">
                                         <h3 class="box-title">Tax Period</h3>
                                         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+                                            <button type="button" class="btn btn-info BankingUI_btnNewTaxPeriod">New Tax Period</button>
                                         </div>
                                     </div>
                                     <!-- /.box-header -->
