--- a/displaytabs/tabs/AccountingUI/TaxPeriodProfileMain.html
+++ b/displaytabs/tabs/AccountingUI/TaxPeriodProfileMain.html
@@ -2,9 +2,9 @@
     <input rowIndex="0" type="hidden" class="form-control editTaxPeriod" module="TaxPeriodUI" name="TaxPeriodId">
     <input rowIndex="0" type="hidden" class="form-control editTaxPeriod" module="TaxPeriodUI" name="code">
     <div class="form-group" style="flex: 3; margin-left: 10px;">
-        <label class="control-label">Employee</label>
+        <label class="control-label">Account</label>
         <div class="input-group" style="width: 100%;">
-            <input rowIndex="0" type="text" class="form-control autocomplete" name="taxCode" placeholder="Payee" module="TaxPeriodUI" mainmodule="TaxPeriodUI" autoname="taxCode" helptitle="taxCode" disabled="">
+            <input rowIndex="0" type="text" class="form-control autocomplete" name="taxCode" placeholder="Payee" module="TaxPeriodUI" mainmodule="TaxPeriodUI" autoname="taxCode" helptitle="taxCode">
             <input rowIndex="0" class="form-control editTaxPeriod HiddenAutoComplete" name="taxCode" type="hidden" module="TaxPeriodUI" mainmodule="TaxPeriodUI" autoNameField="taxCode" value="">
             <div class="autocomplete-items" rowIndex="0" module="TaxPeriodUI" mainmodule="TaxPeriodUI" autoname="taxCode">
             </div>
