--- a/displaytabs/tabs/AccountingUI/TaxPeriodReturn.html
+++ b/displaytabs/tabs/AccountingUI/TaxPeriodReturn.html
@@ -5,6 +5,10 @@
     <input rowIndex="0" type="hidden" class="form-control editTaxPeriod" module="TaxPeriodUI" name="code">
     <div class="box-header with-border">
         <h3 class="box-title">Item Details</h3>
+        <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+            <button type="button" class="btn btn-default BankingUI_btnTaxReturn">
+                <i class="fa fa-plus"></i> Tax Return</button>
+        </div>
     </div>
     <div class="box-body"> 
         <div style="display: flex; flex-direction: column;">
