--- a/home.html
+++ b/home.html
@@ -387,6 +387,7 @@
   <script src="js/modules/submodules/SalesOrderUI.js"></script>
   <script src="js/modules/submodules/TaxPeriodUI.js"></script>
 
+  <script src="js/modules/submodules/ReconcileUI.js"></script>
   <script src="js/modules/submodules/BankingUI.js"></script>
   <script src="js/modules/submodules/ProductRequestUI.js"></script>
   <script src="js/modules/submodules/RealEstateUI.js"></script>
